Fixed some typos

--- a/Biblio.bib
+++ b/Biblio.bib
@@ -571,3 +571,13 @@ year = {2011}
   publisher={CRC Press}
 }
 
+
+@article{LINDGREN2022,
+title = {The SPDE approach for Gaussian and non-Gaussian fields: 10 years and still running},
+journal = {Spatial Statistics},
+volume = {50},
+pages = {100599},
+year = {2022},
+doi = {https://doi.org/10.1016/j.spasta.2022.100599},
+author = {Finn Lindgren and David Bolin and Haavard Rue}
+}
