fix problems with one figure

--- a/Biblio.bib
+++ b/Biblio.bib
@@ -1,5 +1,11 @@
 %Bibliography Chapter 4
 
+@book{Cressie:1993,
+    author  = {Noel Cressie},
+    title   = {Statistics for Spatial Data},
+    publisher = {John Wiley \& Sons, Inc},
+    year    = {1993},
+}
 
 @book{Broemeling:2019,
   title={Bayesian analysis of time series},
