--- a/Biblio.bib
+++ b/Biblio.bib
@@ -655,3 +655,52 @@ author = {Finn Lindgren and David Bolin and Haavard Rue}
   publisher={Wiley Online Library}
 }
 
+@article{wood2004missing,
+  title={Are missing outcome data adequately handled? A review of published randomized controlled trials in major medical journals},
+  author={Wood, Angela M and White, Ian R and Thompson, Simon G},
+  journal={Clinical trials},
+  volume={1},
+  number={4},
+  pages={368--376},
+  year={2004},
+  publisher={Sage Publications Sage CA: Thousand Oaks, CA}
+}
+
+@article{sterne2009multiple,
+  title={Multiple imputation for missing data in epidemiological and clinical research: potential and pitfalls},
+  author={Sterne, Jonathan AC and White, Ian R and Carlin, John B and Spratt, Michael and Royston, Patrick and Kenward, Michael G and Wood, Angela M and Carpenter, James R},
+  journal={Bmj},
+  volume={338},
+  year={2009},
+  publisher={British Medical Journal Publishing Group}
+}
+
+@article{schonbeck2013world,
+  title={The world’s tallest nation has stopped growing taller: the height of Dutch children from 1955 to 2009},
+  author={Sch{\"o}nbeck, Yvonne and Talma, Henk and Van Dommelen, Paula and Bakker, Boudewijn and Buitendijk, Simone E and HiraSing, Remy A and Van Buuren, Stef},
+  journal={Pediatric research},
+  volume={73},
+  number={3},
+  pages={371--377},
+  year={2013},
+  publisher={Nature Publishing Group}
+}
+
+@article{van2011mice,
+  title={mice: Multivariate imputation by chained equations in R},
+  author={Van Buuren, Stef and Groothuis-Oudshoorn, Karin},
+  journal={Journal of statistical software},
+  volume={45},
+  pages={1--67},
+  year={2011}
+}
+
+@article{gomez2022missing,
+  title={Missing data analysis and imputation via latent Gaussian Markov random fields},
+  author={G{\'o}mez-Rubio, Virgilio and Cameletti, Michela and Blangiardo, Marta},
+  journal={SORT-Statistics and Operations Research Transactions},
+  pages={217--244},
+  year={2022}
+}
+
+
