--- a/Practical5/biblio.bib
+++ b/Practical5/biblio.bib
@@ -1,12 +1,13 @@
+@book{singer2003,
+  title={Applied longitudinal data analysis: Modeling change and event occurrence},
+  author={Singer, Judith D and Willett, John B},
+  year={2003},
+  publisher={Oxford university press}
+}
 
-
-@Article{Bakar2015,
-    title = {{spTimer}: Spatio-Temporal Bayesian Modeling Using {R}},
-    author = {Khandoker Shuvo Bakar and Sujit K. Sahu},
-    journal = {Journal of Statistical Software},
-    year = {2015},
-    volume = {63},
-    number = {15},
-    pages = {1--32},
-    url = {http://www.jstatsoft.org/v63/i15},
-  }
+@book{wang2018,
+  title={Bayesian regression modeling with INLA},
+  author={Wang, Xiaofeng and Yue, Yuryan and Faraway, Julian J},
+  year={2018},
+  publisher={Chapman and Hall/CRC}
+}
