EMS talk slides

--- a/talks/EMS2023/index.Rmd
+++ b/talks/EMS2023/index.Rmd
@@ -6,7 +6,7 @@ institute: "[Environment and Health Statistics group](https://www.envstats.org/)
 params: 
    conference: "EMS 2023"
    location: "Warsaw University"
-   date: 7 July 2023
+   date: 7th July 2023
    short_title: "Spatio-temporal Bayesian models for environmental epidemiology"
 output:    
   xaringan::moon_reader: 
@@ -112,8 +112,9 @@ pre code {
 }
 </style>
 
-
 ---
+
+
 
 # Environmental Epidemiology
 
@@ -129,13 +130,13 @@ pre code {
 
 Two main ingredients
 
-`r vspace("20px")`
+`r vspace("10px")`
 
   - Environmental exposure
   
   $\Rightarrow$ a continuous field over the study area.
 
-`r vspace("20px")`
+`r vspace("10px")`
 
   - Health outcomes
 
@@ -145,17 +146,17 @@ Two main ingredients
 
 `r vspace("20px")`
 
-- Study designs typically used:
-`r vspace("20px")`
+Study designs typically used:
+`r vspace("10px")`
   1. Cohort studies - Focus on long-term effects (individual data)
-`r vspace("20px")`
+`r vspace("10px")`
   2. Small area studies - Focus on long-term effects (aggregated data)
-`r vspace("20px")`
+`r vspace("10px")`
   3. Time-series studies - Focus on short-term effects (aggregated data)
 
 --
 
-`r vspace("20px")`
+`r vspace("10px")`
 
 .center[.red[.large[Spatial and temporal dependencies are key.]]]
 
@@ -172,6 +173,8 @@ Two main ingredients
 
 When are we interested in the spatial and temporal components?
 
+--
+
 `r vspace("20px")`
 
 - Hypothesis generating perspective 
@@ -185,6 +188,7 @@ $\rightarrow$ Do we want to evaluate temporal trends for each area?
 `r vspace("20px")`
 
 - Is the spatial clustering and/or temporal trend a nuisance quantity that we wish to take into account but are not explicitly interested in?
+
 $\rightarrow$ Spatial / time series regression.
 
 ---
@@ -194,252 +198,14 @@ $\rightarrow$ Spatial / time series regression.
 
 `r vspace("20px")`
 
+--
+
 In this talk
-
-  - Source apportionment of air pollution and health (times series + risk assessment)
-`r vspace("20px")`
-  - Wastewater modelling (space-time modelling)
-`r vspace("20px")`
-  - Temperature and COPD (non linear relationship + risk assessment)
-
----
-
-name: SA
-
-`r vspace("250px")`
-
-.myblue[.center[.huge[
-**Time series analysis: source apportionment**]]]
-
-
----
-
-# Air pollution and health
-
-- Outdoor air pollution is carcinogenic to humans (IARC 2013);
 `r vspace("10px")`
--  Air pollution causes over 6.5 million deaths each year globally, and this number is increasing (Fuller et al. 2022).
+  - Wastewater modelling and COVID-19 prevalence (space-time geostatistical model; uncertainty propagation; data integration)
 `r vspace("10px")`
-- Outdoor  PM causes a reduction in life expectancy of average population by approximately a year in Europe (WHO 2006);
-`r vspace("10px")`
-- Fossil fuel air pollution is responsible for 1 in 5 deaths worldwide (Vohra et al. 2021).
-`r vspace("10px")`
-- Synergistic effects between heat and air pollution exposure for all-causes as well as cardio-respiratory mortality/hospital admissions (Anenberg et al. 2020).
-`r vspace("10px")`
-- The triad of pollution, climate change, and biodiversity loss are the key global environmental issues of our time (Fuller et al. 2022). 
-
-`r vspace("20px")`
-
-.center[.content-box-blue[
-Particulate matter - PM and gasses such as nitrogen oxide/dioxide and ozone are among the most studied pollutants in environmental epidemiology  
-]
-]
-
----
-
-# Source apportionment
-
-- Particulate matter (PM) is made up of different components coming
-from several sources, which might have different level of toxicity 
-
-- Identifying these sources, known as **Source Apportionment** (SA), is a key element in order to implement effective policies to improve air quality and population health.
-
-`r include_fig("Mixture.jpg", width="50%")`
-
-<center>
-.content-box-green[.center[.large[*Aim*: to apportion particle number size distributions (PNSD) and
-investigate the short-term health effects of the identified sources]]]
-</center>
-
----
-
-# Data
-
-- Particle size distributions, collected at the background monitor station of North Kensington in central London. The particle size range is between 16.5-604.3 nm
-`r vspace("20px")`
-- Meteorological conditions (temperature, humidity)
-`r vspace("20px")`
-- Respiratory hospital admissions in children (0-16 years old), and
-cardiovascular hospital admissions in elderly (+64 years old) in Greater London for the period 2014-2016
-
-### Time series framework
-- Typically used for investigating the short-term associations between exposures such as air pollution or weather variables, and health outcomes such as cardiovascular and respiratory morbidity and mortality.
-
-- Data available at regular time intervals and with a natural order
-
-`r include_fig("Airpoll-health.jpg", width="40%")`
-
-.tiny[source: `r Citet(bibfile,"samoli2003investigating")`]
-
----
-
-## What are the challenges?
-.pull-left[
-`r vspace("50px")`
-- High dimensionality
-
-`r vspace("20px")`
-
-- Correlation 
-
-`r vspace("20px")`
-
-- Link with health
-]
-
-.pull-right[
-`r include_fig("correlation-matrix-bin_1.jpg", width="120%")`
-]
-
----
-
-# Factor analysis
-
-.pull-left[
-Positive Matrix Factorisation commonly used for dimension reduction
-
-$Y_{P \times T} = \Lambda_{P \times K}F_{K \times T}+ \epsilon_{P \times T}$
-where 
-
-- $\Lambda_{P \times K}$ are source profile densities;
-
-- $F_{K \times T}$ are the contribution from the $k$ source to the total particle concentration.
-
-Limitations:
-- Number of sources defined a priori;
-`r vspace("20px")`
-- Uncertainty on the allocation not included;
-`r vspace("20px")`
-- Dependence in time/space not considered in the allocation.
-
-]
-
-.pull-right[
-
-`r include_fig("SourceOutdoorPoll.jpg",width="80%")`
-.center[.tiny[Source: .url[shan.org]]]
-]
-
-
----
-# Proposed approach 
-
-- Bayesian non-parametric 
-`r vspace("20px")`
-- High degree of flexibility;
-`r vspace("20px")`
-  $\rightarrow$ number of sources estimated from the data;
-`r vspace("10px")`
-  $\rightarrow$ uncertainty fully propagated in the source allocation.
-
-Following `r Cite(bibfile,"griffiths2011indian")`, `r Cite(bibfile, "ghahramani2005infinite")`
-.pull-left[
-\begin{align}
-\textbf{X}_t &\sim N_D( (\textbf{Z}_t \circ \textbf{W}_t)\Phi,\sigma^2 I) \nonumber,\\
-\textbf{W}_t &\sim N_K(0,I) \nonumber,\\
-\phi_d &\sim N_K(\mu_\phi,\Sigma_\phi)\nonumber,\\
-Z &\sim IBP(\alpha)\nonumber,\\
-\alpha &\sim \text{Gamma}(\alpha_0,\beta_0),\nonumber\\
-\sigma^2 &\sim \text{Gamma}^{-1}(b_0,b_1)
-\end{align}
-]
-
-.pull-right[
-DAG
-]
-
----
-
-# Characteristics of the model
-
-- time is accounted for in the allocation 
-
-- $\alpha$ governs the number of components
-
---
-
-### Implementation
-
-- The model is implemented in R-Nimble
-
-- 2 chains, 100,000 iterations
-
-### Sensitivity analysis
-
-- Change the prior for $\alpha$
-
----
-
-# Results: source profiles
-
-.pull-left[
-`r include_fig("Profiles.png")`
-]
-
-
-.pull-right[
-`r include_fig("Heatmap.png")`
-]
-
-*Nucleation*: diesel peaks with associated traffic temporal
-patterns
-
-*Secondary*: Aged particles that have grown due to
-the condensation of volatile gaseous compounds on
-their surface
-
-*Urban*: Aged traffic emissions, including also a mix
-of other urban emissions such as biomass burning,
-heating, cooking
-
-*Traffic 1*: Particles associated with spark-ignition vehicles
-
-*Traffic 2*: Particles associated with diesel vehicle emissions
-
----
-
-# Link with health
-
-We assessed the relative risk (RR) for hospitalization for respiratory diseases in children by including the SA posterior estimates into the health model
-
-
-\begin{align*}
-y_t &\sim \text{Poisson}(\mu_t E)\\
-\log(\mu_{t})&= \beta_0 + \sum_k \beta_k f_{k(t-\ell)} + \sum_i s(v_{ti}, \psi_i) + \delta_{I_t} + \epsilon_t
-\end{align*}
-
---
-
-where $f_{k(t-\ell)}$ are the factors with specified lags
-
-- Additionally, temporal long term components are included through $\epsilon$
-
-- Confounders are accounted for in a non-linear flexible way through splines
----
-
-# Results: health effects
-
-.pull-left[
-`r include_fig("Children_Resp.jpg", width="50%")`
-]
-
-.pull-right[
-
-- Clear differential impact of the different sources
-
-$\rightarrow$ Nucleation and urban show evidence of a negative impact on health 
-
-]
----
-
-# Moving forward
-
-- Understanding the impact of a two-stage vs joint model for sources and health
-
-- Several lags might need to be considered
-
-- Additional spatial component might be beneficial to understand the different impact of these sources
-
+  - Temperature and COPD hospitalisations (space-time areal model; dose-response)
+  
 ---
 
 name: WBE
@@ -447,7 +213,7 @@ name: WBE
 `r vspace("250px")`
 
 .myblue[.center[.huge[
-**Space-Time modelling: wastewater based epidemiology**]]]
+**Space-time modelling: wastewater based epidemiology**]]]
 
 ---
 
@@ -517,17 +283,10 @@ concentration over a spatially continuous domain.
 # Modelling spatial data
 
 - **Point-referenced data**: the exact location of the occurrences is known
-  -  can be collected through specialized survey / monitoring network...
+  -  can be collected through specialized survey / monitoring network
   - if locations are **fixed** (monitoring stations, postcodes in an area) and the variable of interest is measured at each location (e.g. presence/absence of cases, pollution concentrations)
   
   $\Rightarrow$ .red[geostatistical framework.]
-
---
-
-.center[.content-box-blue[
-**First law of geography** (W. Tobler, 1970): everything is related to everything else, but near things are more related than distant things `r Citet(bibfile,"miller2004tobler")`
-]
-]
 
 --
 
@@ -546,6 +305,29 @@ there are no observations.
 .center[The common framework to geostatistical models is that of .red[**Gaussian
 random fields**.]]
 
+`r vspace("70px")`
+
+---
+
+# Gaussian random fields
+
+- A spatial process is a Gaussian field if $\left(y(\bm s_1),\ldots, y(\bm s_n)\right)$ follows a multivariate Normal distribution with mean $\bm \mu=\left(\mu(\bm s_{1}), \ldots, \mu(\bm s_{n})\right)$ and spatially structured covariance matrix $\bm \Sigma$. 
+
+--
+
+- The spatial process is called .red[second-order stationary] if 
+
+(i) $\bm \mu$ is constant (i.e. $\mu(\bm s_{i}) = \mu$ for each $i$) 
+
+(ii) the spatial covariance function depends only on the distance vector $(\bm s_{i}-\bm s_{j})$. 
+
+--
+
+- A stationary process is .red[isotropic] if the covariance does not depend on the direction but just on the Euclidean distance  $||\bm s_{i}-\bm s_{j}|| \in \mathbb{R}$.
+
+--
+
+- Several functions are available for the spatial covariance function (eg exponential,Mat&eacute;rn, spherical, etc.) parameterized by some parameters (eg spatial variance, range, etc.).
 
 ---
 
@@ -609,7 +391,10 @@ $$y_{it} \sim \text{Normal}(\mu_{it}, \sigma^2_y)$$
 with $\sigma^2_y$ as the measurement error variance. For the latent mean concentration $\mu_{it}$ we specify a linear model:
 
 $$\mu_{it} = \alpha_{region_{g_i}} + \bm{x}_i \bm{\beta} +  u_i + v_t + z_{it}$$
- 
+
+`r vspace("60px")`
+
+.small[Li et al. A spatio-temporal framework for modelling wastewater concentration during the COVID-19 pandemic, Env Int 172 (2023)]
 ---
 
 count:false
@@ -633,6 +418,11 @@ with $\sigma^2_y$ as the measurement error variance. For the latent mean concent
 $$\mu_{it} ={\color{red}{\alpha_{region_{g_i}}}} + \bm{x}_i \bm{\beta} +  u_i + v_t + z_{it}$$
 
 - $\color{red}{\alpha_{region_{g_i}}}$: region specific intercept, modelled as exchangeable
+
+
+`r vspace("20px")`
+
+.small[Li et al. A spatio-temporal framework for modelling wastewater concentration during the COVID-19 pandemic, Env Int 172 (2023)]
 
 ---
 
@@ -658,6 +448,11 @@ $$\mu_{it} = \alpha_{region_{g_i}} + {\color{red}\bm{x}_i \bm{\beta}} +  u_i + v
 
 - $\color{red}{\bm{x}_i \bm{\beta}}$: vector of covariates and their effects
 
+
+`r vspace("20px")`
+
+.small[Li et al. A spatio-temporal framework for modelling wastewater concentration during the COVID-19 pandemic, Env Int 172 (2023)]
+
 ---
 
 count: false
@@ -681,6 +476,11 @@ with $\sigma^2_y$ as the measurement error variance. For the latent mean concent
 $$\mu_{it} = \alpha_{region_{g_i}} + \bm{x}_i \bm{\beta} +  {\color{red}u_i} + v_t + z_{it}$$
 
 - $\color{red}{u_i}$: spatial random effect with an exchangeable prior 
+
+
+`r vspace("20px")`
+
+.small[Li et al. A spatio-temporal framework for modelling wastewater concentration during the COVID-19 pandemic, Env Int 172 (2023)]
 
 ---
 
@@ -707,6 +507,11 @@ $$\mu_{it} = \alpha_{region_{g_i}} + \bm{x}_i \bm{\beta} +  u_i + {\color{red}v_
 
 - $\color{red}{v_t}$: temporal random effect modelled with first order random walk
 
+
+`r vspace("20px")`
+
+.small[Li et al. A spatio-temporal framework for modelling wastewater concentration during the COVID-19 pandemic, Env Int 172 (2023)]
+
 ---
 
 # Spatio-temporal random effect
@@ -714,10 +519,10 @@ $$\mu_{it} = \alpha_{region_{g_i}} + \bm{x}_i \bm{\beta} +  u_i + {\color{red}v_
 $$\mu_{it} = \alpha_{region_{g_i}} + \bm{x}_i \bm{\beta} +  u_i + v_t + {\color{red}z_{it}}$$
 
 - $\color{red}{z_{it}}$: spatio-temporal random effect, modelled as a temporal autoregressive structure with spatially correlated innovations, similar to `r Citet(bibfile, "cameletti2011comparing")`:
-\begin{align*}
+\begin{align}
 t = 1 \qquad \boldsymbol{z}_t &\sim \text{Normal}(0,\Sigma_{z})\\
 t > 1 \qquad \boldsymbol{z}_t &\sim \text{Normal}(\rho\boldsymbol{z}_{t-1},\Sigma_{z})
-\end{align*}
+\end{align}
 with $\rho$ as the temporal autoregressive coefficient. 
 
 --
@@ -726,8 +531,10 @@ The  $\Sigma_{z}$ matrix represents the spatial structure and is defined using a
 
 $$\text{Cov}(\bm{z}_i,\bm{z}_s)\ = \frac{\sigma^2_{z}}{\Gamma(\lambda)2^{\lambda-1}}(\kappa ||\bm{z}_i - \bm{z}_s||)^{\lambda}K_{\lambda}(\kappa ||\bm{z}_i - \bm{z}_s||)$$
 
-where $\Gamma(\lambda)$ is the gamma function, $K_{\lambda}$ is the modified Bessel function of second kind with order $\lambda$. The parameter $\kappa>0$ controls the range $\rho=\sqrt{8\lambda}/\kappa$ and indicate the distance where the spatial correlation is close to 0.1. 
+where $\Gamma(\lambda)$ is the gamma function, $K_{\lambda}$ is the modified Bessel function of second kind with order $\lambda$. The parameter $\kappa>0$ controls the range $r=\sqrt{8\lambda}/\kappa$ and indicate the distance where the spatial correlation is close to 0.1. 
 
+<!-- k is scaling parameter, while lambda is the parameter of the Bessel function which governs the degree of smoothing (typically fixed)
+-->
 ---
 
 # Spatial prediction
@@ -752,15 +559,15 @@ The posterior predictive distribution at the LSOA centroids can be combined to r
   - Here we consider all the Lower Tier Local Authorities in England and average the corresponding LSOA values, weighted by the population in each LSOA.
 
 
+<!--
 - Implemented in R-INLA 
+-->
 
 ---
 
 
 # Detection of areas at increased risk of outbreaks
 
-.panelset[
-.panel[.panel-name[Detection]
 We used the posterior predictive distribution to detect increases in the wastewater viral concentration. For each LTLA $(l=1,\ldots,L)$ an increase in viral concentration over two consecutive weeks is the event (E):
 \begin{eqnarray}
 E = I(\mu_{lt} > \mu_{l(t-1)} > \mu_{l(t-2)})
@@ -768,15 +575,16 @@ E = I(\mu_{lt} > \mu_{l(t-1)} > \mu_{l(t-2)})
 where $I(\cdot)$ is the indicator function.
 
 `r vspace("20px")`
-A high predictive probability, ${\rm Prob}(E)>c$ for a pre-specified threshold $c$, would then trigger a warning of a potential outbreak. This approach has been used for public health surveillance in both high-income `r Citep(bibfile,"diggle2005env")` and low-to-middle-income `r Citep(bibfile,"diggle2007anntrop")` countries. 
-]
+A high predictive probability, ${\rm Prob}(E)>c$ for a pre-specified threshold $c$, would then trigger a warning of a potential outbreak. This approach has been used for public health surveillance in both high-income (Diggle et al, 2005) and low-to-middle-income (Diggle et al., 2007) countries. 
 
-.panel[.panel-name[Mapping]
+`r vspace("250px")`
 
-`r include_fig("Detection.png",width="50%")`
-]
-]
+.small[
+Diggle et al. Point process methodology for on-line spatio-temporal disease surveillance, Environmetrics, 16 (2005): 423-434
 
+Diggle et al. Spatial modelling and prediction of loa loa risk: decision making under uncertainty, Ann. Trop. Med. Parasitol., 101 (2007): 499-509
+
+]
 ---
 
 #Interactive dashboard
@@ -793,9 +601,24 @@ knitr::include_url("https://b-rowlingson.gitlab.io/wwatlas/", height="100%")
 
 # Wastewater viral concentration and COVID-19 prevalence
 
-.pull-left[The relationship between viral concentration in
-wastewater and COVID-19 prevalence appears to be .red[complex
-and varying over both space and time.]]
+.pull-left[
+- Several studies have evaluated the relationship between viral load in
+wastewater and prevalence of COVID-19 disease (e.g. Shah et al. 2022, Proverbio et al. 2022)
+
+`r vspace("20px")`
+- The relationship between viral concentration in
+wastewater and COVID-19 prevalence appears to be **complex
+and varying over both space and time.**
+
+`r vspace("200px")`
+.small[
+Shah et al. Wastewater surveillance to infer COVID-19 transmission: A systematic review. Science of The Total Environment 804 (2022): 150060;
+
+`r vspace("20px")`
+
+Proverbio et al. Model-based assessment of COVID-19 epidemic dynamics by wastewater analysis. Science of the Total Environment 827 (2022): 154235.]
+]
+
 
 
 .pull-right[`r include_fig("fig6.jpg", width="50%")`]
@@ -842,7 +665,7 @@ a finer spatial scale?
 
 - Wastewater predictions available from the geostatistical model
 
-- Posterior distribution of COVID-19 prevalence obtained through `r Citet(bibfile,"nicholson2022improving")` 
+- Posterior distribution of COVID-19 prevalence obtained through Nicholson et al. (2022) 
 
 --
 
@@ -862,6 +685,10 @@ where
 - $b_t$ is modelled using a RW1
 - $d_t$ is modelled using a RW2
 
+`r vspace("80px")`
+
+.small[Nicholson et al. Local prevalence of transmissible SARS-CoV-2 infection: an integrative causal model for debiasing fine-scale targeted testing data, Nature Microbiology 7 (2022): 97–107.]
+
 ---
 
 # Modelling framework
@@ -870,7 +697,7 @@ where
 
 - Wastewater predictions available from the geostatistical model
 
-- Posterior distribution of COVID-19 prevalence obtained through `r Citet(bibfile,"nicholson2022improving")` 
+- Posterior distribution of COVID-19 prevalence oobtained through Nicholson et al. (2022) 
 
 --
 
@@ -887,6 +714,9 @@ where
 - $\bm{g}_t$ and $\bm{S}_t$ are the posterior mean and covariance matrix from the wastewater model
 - $u_{l}$, $v_{lt}, m_l$ are modelled as exchangeable
 
+`r vspace("80px")`
+
+.small[Nicholson et al. Local prevalence of transmissible SARS-CoV-2 infection: an integrative causal model for debiasing fine-scale targeted testing data, Nature Microbiology 7 (2022): 97–107.]
 
 ---
 
@@ -925,7 +755,7 @@ $\rightarrow$ spatial-varying coefficient for wastewater $\mu_{lt} = (\alpha + u
 
 # Results
 
-.pull-left[`r include_fig("Results.png", width="150%")`
+.pull-left[`r include_fig("Results.png", width="200%")`
 ]
 
 .pull-right[
@@ -960,13 +790,37 @@ $\rightarrow$ Some areas are consistently underestimated/overestimated
 
 ---
 
-# What's next
+# Discussion
 
-How can wastewater be incorporated into a real-time, multiplex public health surveillance system?
+- Relationship with disease is not trivial. In a descriptive way we found a spatial and temporal dynamicity and evidence of non-linearity. It could depend on several factors like vaccination, variants and metereology.
+
+--
 
 `r vspace("20px")`
 
-`r include_fig("Surveillance_representation.png", width="60%")`
+- The proposed framework for disaggregation demonstrates the added-value of wastewater data to inform local prevalence
+
+$\rightarrow$ Continuous running of randomised surveys at a reduced capacity to provide coarse prevalence estimates remains a key pillar in COVID monitoring, anchoring the disaggregation and the relationship
+
+--
+
+`r vspace("20px")`
+
+- The wastewater-prevalence relationship seems stable in time over the study period but will likely need to be recalibrated over longer times
+
+$\rightarrow$ occasional running of randomised surveys at a fine spatial scale is required
+
+`r vspace("10px")`
+
+$\rightarrow$ impact on the results will need to be evaluated
+
+--
+
+`r vspace("20px")`
+
+- Starting point but a long way to go
+
+$\rightarrow$ should be extended to include other data sources, such as syndromic and secondary care data, to enable quantitatively accurate monitoring of disease evolution across a population.
 
 ---
 
@@ -975,7 +829,7 @@ name: COPD
 `r vspace("250px")`
 
 .myblue[.center[.huge[
-**Space-Time modelling: Temperature and Health**]]]
+**Space-time modelling: Temperature and Health**]]]
 
 
 
@@ -983,11 +837,25 @@ name: COPD
 
 # COPD and temperature
 .panelset[
+.panel[.panel-name[COPD]
+
+`r include_fig("COPD_lung.png",width="60%")`
+
+- In England, 115,000 emergency admissions and 24,000 deaths per year.
+`r vspace("20px")`
+- COPD exacerbations: Bacteria, viruses and air-pollution.
+`r vspace("20px")`
+- The role of temperature is unclear. 
+
+]
+
 .panel[.panel-name[Temperature and Health]
 
 .pull-left[
-- Typically U-shaped relationship between temperature and health.
+- Typically U-shaped relationship between temperature and mortality.
+`r vspace("20px")`
 - Cold, dry air or hot air can trigger a flare-up.
+`r vspace("20px")`
 - Different confounding, different lags across different temperatures.
 ]
 
@@ -997,23 +865,14 @@ name: COPD
 ]
 
 ]
-
-.panel[.panel-name[COPD]
-
-`r include_fig("COPD_lung.png",width="60%")`
-
-- In England, 115,000 emergency admissions and 24,000 deaths per year.
-- COPD exacerbations: Bacteria, viruses and air-pollution.
-- The role of temperature is unclear. 
-
-]
 ]
 
 ---
 
 # Aim
 
-.content-box-green[Examine the effect of warm temperatures on COPD hospitalizations.]
+`r vspace("30px")`
+.center[.content-box-green[Examine the effect of warm temperatures on COPD hospitalizations.]]
 
 `r vspace("30px")`
 
@@ -1030,18 +889,18 @@ Secondary objectives:
 # Outcome and exposure
 
 .pull-left[
+### Outcome
 - COPD hospitalization (ICD10 J40-44) 2007-2018 (NHS digital).
 - Individual data/ 100m grid spatial resolution.
 - Summer months.
 
---
-
+### Exposure
 - Daily maximum temperature 2007-2018 at 1km grid from MetOffice.
 - lag0-2.
 ]
 
 .pull-right[
-`r include_fig("temperatureLTLA.png")`
+`r include_fig("temperatureLTLA.png", width="80%")`
 ]
 
 ---
@@ -1054,15 +913,18 @@ Secondary objectives:
 `r vspace("20px")`    
 - Exposure period 0-2 days before the hospital episode (mean temperature)
 
-`r include_fig("FigCaseCrossOver.png", width="60%")`
+`r include_fig("FigCaseCrossOver.png", width="70%")`
 
+- Adding a spatial dimension to account for modifiers
 ---
 
 # Confouders and spatial effect modifiers
 
-.panel-set[.panel[
-panel-name[Confounders]
+.panelset[
+.panel[.panel-name[Confounders]
+
 ```{r conf-tables}
+library(kableExtra)
 Confounder<- c("PM2.5","O3","Relative Humidity","Holidays")
 Source <- c("MetOffice","MetOffice","MetOffice","ONS")
 Space<-c("1Km","1Km","10Km", "nationwide")
@@ -1070,37 +932,240 @@ Time<- rep("daily",4)
 Year<-rep("2007-2018",4)
 
 df<- data.frame(Confounder,Source,Space,Time,Year)
-knitr::kable(df)
+df %>% 
+  kbl() %>% 
+  kable_material(c("striped", "hover"))
 ```
 ]
 
-.panel[panel-name[Effect modifiers]
+.panel[.panel-name[Effect modifiers]
 
-`r include_fig("SpatEffMod.png")`
+`r include_fig("SpatEffMod.png", width="70%")`
 ]
 ]
 
 ---
 
+# Step 1: Find the linear threshold
 
-# Acknowledgments
+Let $Y_{tj}$ be the case-control identifier for the COPD hospitalisation for the event (case or control) at time $t$, in the $j-th$ case-control group:
+  
+\begin{align}
+Y_{tj} &\sim \mbox{Poisson}(\mu_{tj})\\
+\log(\mu_{tj}) &= \alpha_1 I(X_{1t} < c) X_{1t} + \alpha_2 I(X_{1t} \geq c) X_{1t} + \sum_{m=1}^4\beta_mZ_{mt} + u_{j}\\
+u_j &\sim N(0, 100)\\
+\alpha_1, \alpha_2, \beta_1, \dots \beta_4 & \sim N(0, 1)\\
+\end{align}
+
+$c$ is the temperature threshold,  $50-$th, $55-$th, ...,  $90-$th,  $95-$th percentile. 
+
+--
+
+`r vspace("20px")`
+
+We ran the above model for the different temperature thresholds and chose the one which minimises the WAIC.
+
+---
+
+# Step 2a: Effect modification by age and sex
+  
+Similarly we fitted the previous model for the different sex-age groups (male/female and $<65$, $65-85$, $>85$ ). Consider $g$ the index for the age-sex groups:
+
+\begin{align*}
+Y_{tjg} &\sim \text{Poisson}(\mu_{tjg})\\
+\log(\mu_{tjg}) &= \alpha_1 I(X_{1tg} < c^{\star}) X_{1tg} + \alpha_2 I(X_{1tg}\geq c^{\star})X_{1tg} + \sum_{m=1}^4\beta_mZ_{mtg} + u_{j}\\
+u_j &\sim N(0, 100)\\
+\alpha_1, \alpha_2, \beta_1, \dots \beta_4 & \sim N(0, 1)\\
+\end{align*}
+
+---
+
+# Step 2b. Spatial Effect modification
+.pull-left[    
+\begin{align*}
+Y_{tj} & \sim \text{Poisson}(\mu_{tj})\\
+\log(\mu_{tj}) & = \alpha_1 I(X_{1t}< c^{\star})X_{1t} + \alpha_{2s_j} I(X_{1t}\geq c^{\star})X_{1t} +\\ 
+& \sum_{m=1}^4\beta_mZ_{mt} + u_{j}\\
+\alpha_{2s} &= \alpha_2 + \sum_{m=1}^8 \gamma_q H_{sq} + v_s + b_s\\
+v_s &\sim N(0, \sigma_2)\\
+b_s|b_{-s} &\sim N\left(\frac{\sum_{s \sim r} w_{rs} b_s}{\sum_{s \sim r} w_{rs}},        \frac{\sigma^2}{\sum_{s \sim r} w_{rs}}\right)\\
+\end{align*}
+
+where $\bm{H}_s$ is a vector of the following covariates at the Lower Tier Local Authority level (LTLA):
+
+1\. Quintiles of deprivation
+2\. Proportion of green space
+3\. Urbanicity index
+4\. Average temperature
+]
+
+.pull-right[
+  `r include_fig("London.jpg")`
+]
+
+`r vspace("30px")`
+.small[
+Konstantinoudis et al., Asthma hospitalisations and heat exposure in England: a case–crossover study during 2002–2019, Thorax (2023), in press.
+]
+
+---
+
+# Results
+
+.panelset[.panel[.panel-name[Threshold selection and effect modification]
+
+- In the adjusted model, the 80th percentile of the temperature (23.2C) was the threshold minimising the WAIC
+
+- The increase in the COPD hospitalisation risk for every 1°C increase in temperatures above 23.2C was 0.47% (95% CrI 0.16% to 0.75%) 
+
+
 .pull-left[
-.red[Source apportionment]:
 
-`r include_fig("MRClogo.png", width="60%")`
+`r vspace("30px")`
+Effect modification by age and sex: 
 
-**Monica Pirani**, **Georges Bucyibaruta** (ICL, EBS)
+- unadjusted models show increased risk which substantially reduces when the confounders are included
+`r vspace("15px")`
+- Evidence of an increased risk for females above 65 years old
+]
 
-**Gary Fuller**, **Anya Tremper**, **Dave Green** (IC-ERG)
+.pull-right[
+`r include_fig("ConfoundersRR.jpg", width="100%")`
+]
+]
 
-**Christina Mitsakou** (UKHSA)
+.panel[.panel-name[Spatial effect modifiers]
+
+.pull-left[
+`r include_fig("SVC.png", width="100%")`
+
+`r include_fig("SVC_adj.png", width="100%")`
 
 ]
 
 .pull-right[
-.red[Wastewater based epidemiology]:
 
-`r include_fig("Turing.png", width="60%")`
+- Evidence of spatial variation
+`r vspace("30px")`
+- Not enough evidence of effects of the covariates in explaining the spatial variation
+
+```{r res-tables}
+library(kableExtra)
+Modifier<- c("Urban","Avg Temp")
+PercentChange <- c("−1.57 (−4.16 to 0.96)","−0.41 (−1.49 to 0.71)")
+Probability<-c(0.12,0.22)
+
+df<- data.frame(Modifier,PercentChange,Probability)
+df %>% 
+  kbl() %>% 
+  kable_material(c("striped", "hover"))
+```
+]
+]
+]
+
+---
+
+# Population Attributable Fraction (PAF)
+
+- Typically used in epidemiological studies to evaluate the number of health end points which happened due to the exposure/risk factor.
+
+.pull-left[
+- Generally estimated over the entire study region
+
+- Here we used the model with spatially-varying coefficients to estimate a local PAF using the following three steps
+
+1. Obtain the cumulative exposure-outcome relative risk $\text{RR}_s = \exp\big(\alpha_{2s}(X_{1, s, \text{max}} - c^*)\big)$
+2. Calculate $\text{AF}_s = (\text{RR}_s - 1)/\text{RR}_s$
+
+3. Then $\text{PAF}_s = \text{AF}_s (n_s/N_s)$
+
+where $N_s$ and $n_s$ are the total number of hospitalisations and those at days above 23.2C 
+]
+
+.pull-right[
+
+`r include_fig("PAF.jpg", width="70%")`
+
+- Overall 7.8% (95% CrI 6.7% to 8.8%) of the total COPD hospitalisations in summer (2007-2019) are due to temperature above 23.2C
+- Clear spatial structure (more than 8% in East Midlands, East of England, London and South East, while it is below 5% in the South West).
+
+]
+
+---
+
+# Discussion
+
+- Spatial case-crossover model allows to take advantage of individual level data when the individual level confounders are not available (as long as they do not change quickly in time)
+
+`r vspace("20px")`
+
+- Extended to investigate spatially effect modifiers (could be done for temporal effect modifiers too)
+
+`r vspace("20px")`
+
+- Computationally intensive
+
+`r vspace("20px")`
+
+- Evidence that COPD hospitalisations increase with warmer temperatures and as temperatures consistently increase, public health systems should be alerted and prepared to challenge the increased COPD hospitalisation burden. 
+
+---
+# General remarks
+
+- Spatial and temporal dependencies are crucial to account for in environmental epidemiology
+
+`r vspace("10px")`
+
+$\rightarrow$ they add a level of understanding on the phenomenon under study and help reduce biases
+
+`r vspace("10px")`
+
+$\rightarrow$ using the spatio-temporal structure (and potentially covariates) the model can predict at any location in the study region
+
+`r vspace("20px")`
+
+- Increased flexibility, but also additional statistical challenges
+
+`r vspace("10px")`
+
+$\rightarrow$ parameter structure
+
+`r vspace("10px")`
+
+$\rightarrow$ computationally intensive
+
+`r vspace("10px")`
+
+$\rightarrow$ transferability
+
+`r vspace("20px")`
+
+- Reporting is challenging, particularly when dealing with stakeholders
+
+---
+
+# Acknowledgments
+
+.pull-left[
+.red[Temperature and COPD:]
+
+`r include_fig("MRClogo.png", width="60%")`
+
+**Garyfallos Konstantinoudis**, **Cosetta Minelli** (ICL)
+
+**Antonio Gasparrini** (LSHTM)
+
+**Ana Maria Vicedo Cabrera** (University of Bern)
+
+**Joan Ballester** (ISGlobal)
+
+]
+
+.pull-right[
+.red[Wastewater based epidemiology:]
+
+`r include_fig("Turing.png", width="70%")`
 
 **Guangquan Li** (Northumbria University)
 
@@ -1117,5 +1182,3 @@ knitr::kable(df)
 **Matt Wade**, **Hubert Denise**, **William Rowe**, **Daniel James**, **Jasmine Grimsley** (UKHSA)
 
 ]
-
----
