Update of lectures for day 4 and 5

--- a/Session5/Biblio.bib
+++ b/Session5/Biblio.bib
@@ -174,3 +174,12 @@ year = {2011}
   publisher={CRC Press}
 }
 
+@article{cameletti2013spatio,
+  title={Spatio-temporal modeling of particulate matter concentration through the SPDE approach},
+  author={Cameletti, Michela and Lindgren, Finn and Simpson, Daniel and Rue, H{\aa}vard},
+  journal={AStA Advances in Statistical Analysis},
+  volume={97},
+  pages={109--131},
+  year={2013},
+  publisher={Springer}
+}
