Update of Session 3.1

--- a/Session3.1/Biblio.bib
+++ b/Session3.1/Biblio.bib
@@ -20,3 +20,10 @@
   year={2022},
   publisher={CRC Press}
 }
+
+@book{gomez2020bayesian,
+  title={Bayesian inference with INLA},
+  author={G{\'o}mez-Rubio, Virgilio},
+  year={2020},
+  publisher={CRC Press}
+}
