--- a/talks/MRC2024/index.Rmd
+++ b/talks/MRC2024/index.Rmd
@@ -778,6 +778,8 @@ $\rightarrow$ transferability
 
 **Joan Ballester** (ISGlobal)
 
+**Paul Agnew** (MetOffice)
+
 ---
 
 # Links to papers and code
