--- a/talks/GEOMED2024/index.Rmd
+++ b/talks/GEOMED2024/index.Rmd
@@ -510,7 +510,7 @@ $y_{itj} \sim \mathcal{N}(\mu_{itj}, \sigma^2)$ for sex ratio.
 
 On the linear predictor
 
-$$h(\mu_{it}) = {\color{red}{\alpha_0 + \alpha_1 w_{i}}} +
+$$h(\mu_{itj}) = {\color{red}{\alpha_0 + \alpha_1 w_{i}}} +
   \psi_0 t + \psi_1 w_{i} t  + \delta_0 z_{tj_i}(t-t_{0j_i}) + \delta_1 w_{i} z_{tj_i}(t-t_{0j_i}) + \sum_{k=1}^K \beta_k X_{ik} + \gamma_i$$
   
 `r vspace("30px")`
@@ -992,19 +992,15 @@ included ethnic group, the exposure period, all aforementioned confounders, a li
 
 `r vspace("30px")`
 
-- it naturally allows the construction of additional quantities of interest with their associated uncertainty
-
+- It naturally allows the construction of additional quantities of interest with their associated uncertainty
 
 $\rightarrow$ Immediate and sustained effect can be obtained 
 
 `r vspace("30px")`
 
-- Caveat: it cannot be framed in a traditional causality perspective entirely, but it allows to evaluate the effect of intervention in a regression-type model
+- Caveat: it cannot always be framed in a traditional causality perspective, but it allows to evaluate the effect of intervention in a regression-type model
 
 `r vspace("30px")`
-
-
-- Still some assumptions are needed
 
 ---
 
@@ -1027,7 +1023,11 @@ A positive or a negative impact experienced in one place due to an independent e
 
 - Model framework can be extended so that the intervention effects are are specific
 
+`r vspace("20px")`
+
 - Specified as function of space and/or covariates
+
+`r vspace("20px")`
 
 - Synthetic controls can be added
 
