Some typos in slides corrected

--- a/talks/GEOMED2024/index.Rmd
+++ b/talks/GEOMED2024/index.Rmd
@@ -234,7 +234,7 @@ count:false
 
 </style>
   
-.center[Evaluating the effects of policy interventions is of crucial importance.]
+.center[Evaluating the effects of policy interventions is of crucial importance]
 
 --
 
@@ -251,7 +251,7 @@ count:false
 --
 
 `r vspace("500px")`
-.center[.red[Robust statistical methods needed.]]
+.center[.red[Robust statistical methods needed]]
 
 ---
 # Can we infer causality?
@@ -701,8 +701,7 @@ $$h(\mu_{itj}) = \alpha_0 + \alpha_1 w_{i} +
 - **Policy definition** contextual awareness using monthly statistics (Department of Work and Pensions) of UC - when it reaches 25% we assume the Local Authority has switched to UC. 
 `r vspace("10px")`
 
-- **Confounders**  (individuals) age, education level, ethnicity, relationship sta-
-tus, and sex; (area level) social deprivation and ethnic diversity  
+- **Confounders**  (individuals) age, education level, ethnicity, relationship status, and sex; (area level) social deprivation and ethnic diversity  
 ]
 
 .pull-right[
@@ -849,9 +848,9 @@ E(Y_{ijt})= h(\mu_{ijt}) &= \\
 & \alpha_{0} + \alpha_{j} w_{j_i} + \\
 &\psi_{0} t + \psi_{j} w_{j_i} t + \\
 &{\color{red}{\phi_{0}^{\star} z_{t}^{1} + \phi_{j}^{\star} z_{t}^{1} w_{j_i}}} + \\
-&\phi_{0} z_{t}^{1} (t - t_{0}^{1}) + \phi_{j} z_{t}^{1} (t - t_{0}^{1}) w_{j_i} + \\
+&{\color{red}{\phi_{0} z_{t}^{1} (t - t_{0}^{1})}} + {\color{red}{\phi_{j} z_{t}^{1} (t - t_{0}^{1}) w_{j_i}}} + \\
 &{\color{red}{\delta_{0}^{\star} z_{t}^{2} + \delta_{j}^{\star} z_{t}^{2} w_{j_i}}} + \\
-&\delta_{0} z_{t}^{2} (t - t_{0}^{2}) + \delta_{j} z_{t}^{2} (t - t_{0}^{2}) w_{j_i} + \\
+&{\color{red}{\delta_{0} z_{t}^{2} (t - t_{0}^{2})}} + {\color{red}{\delta_{j} z_{t}^{2} (t - t_{0}^{2}) w_{j_i}}} + \\
 & \sum_{k=1}^K \beta_k X_{itk} + \gamma_i + \lambda_t
 \end{align*}
 ]
